--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,69 @@
   padding: 5px;
 }
 
+
+@media (max-width: 1000px) {
+  .container{
+    width: 50vw;
+  }
+  
+  .button-icon{
+    margin-right: 8px;
+  }
+}
+
+
+@media (max-width: 800px) {
+  .form-container{
+    width: 70vw;
+    right: 15%;
+  }
+  .container{
+    width: 70vw;
+  }
+  .button-icon{
+    margin-right: 8px;
+  }
+}
+
+@media (max-width: 600px) {
+  .form-container{
+    width: 90vw;
+    right: 1%;
+  }
+
+  .container{
+    width: 90vw;
+  }
+  .button-icon{
+    margin-right: 9px;
+  }
+}
+
+@media (max-width: 400px) {
+  .container-sub-header{
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .form-container{
+    width: 70vw;
+    right: 9%;
+  }
+
+  .container{
+    width: 80vw;
+    padding: 2px;
+  }
+  .button-icon{
+    margin-right: 2px;
+  }
+
+  .container-button{
+    justify-content: space-around;
+    width: 90%;
+  }
+
+  h2{
+    text-align: center;
+  }
+}
